logs/dpmfa-simulator.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dpmfa_simulator'...
Compiling './lib/python3.5/site-packages/dpmfa_simulator/model.py'...
***   File "./lib/python3.5/site-packages/dpmfa_simulator/model.py", line 211
    print 'model valitity checked'
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dpmfa_simulator/simulator.py'...
***   File "./lib/python3.5/site-packages/dpmfa_simulator/simulator.py", line 139
    print str(currentStep)+', ',
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dpmfa_simulator-0.921.egg-info'...
Listing './lib/python3.5/site-packages/example'...
Compiling './lib/python3.5/site-packages/example/example_runner.py'...
***   File "./lib/python3.5/site-packages/example/example_runner.py", line 70
    print ''
           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
